--- a/index.html
+++ b/index.html
@@ -3,73 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Notas promedio</title>
+    <title>Notas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <style>
-        body {
-            background-color: #bbb8b8; /* Cambia el color de fondo */
-        }
-        .navbar {
-            background-color: #343a40; /* Cambia el color del navbar */
-        }
-        .navbar-brand {
-            color: white;
-            font-size: 24px;
-            font-weight: bold;
-        }
-    </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg">
-        <div class="container">
-            <a class="navbar-brand" href="#">Alberto Garcia</a>
-        </div>
-    </nav>
-
-    <div id="app">
+    <div id="App">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
-                    <h1>Agregar nota</h1>
-                    <label>Nombre:</label>
-                    <input type="text" v-model="nombre" class="form-control">
+                <div class="col-md-6 col-xs-12">
+                    <h1>Agregar Nota</h1>
+                    <label for="nombre">Nombre:</label>
+                    <input type="text" id="nombre" v-model="nombre" class="form-control">
 
-                    <label>Promedio:</label>
-                    <input type="number" min="0" max="10" v-model="promedio" class="form-control">
 
-                    <input type="button" value="Guardar" class="btn btn-success" v-on:click="agregarnota">
+                    <label for="promedio">Promedio:</label>
+                    <input type="number"  id="promedio" min="0" max="10" v-model="promedio" class="form-control">
+
+                    
+
+                    <input type="button" value="Guardar" class="btn btn-success"
+                    v-on:click="agregarnota">
+
                 </div>
 
-                <div class="col-md-6">
+                <div class="col-md-6 col-xs-12">
                     <h1 v-if="lista.length > 0">Lista de notas</h1>
-                    <h1 v-else>Lista de notas</h1>
-                    <table class="table">
+                    <h1 v-else="">No hay notas</h1>
+                    <label for="nombre">Nombre:</label>
+                    <table class="table table-striped">
                         <thead>
                             <tr>
-                                <th>Nombre</th>
-                                <th>Promedio</th>
-                                <th>Estado</th>
+                                <th style="background-color: green;">Nombre:</th>
+                                <th style="background-color: rgb(234, 255, 0) ;">Promedio:</th>
+                                <th style="background-color: red;">Estado</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr v-for="item in lista">
                                 <td v-text="item.nombre"></td>
                                 <td v-text="item.promedio"></td>
-                                <td :style="{ color: item.estadoColor }">{{ item.estado }}</td>
+                                <td v-text="item.estado"></td>
                             </tr>
                         </tbody>
                         <tfoot>
                             <tr>
-                                <td colspan="3">Notas finales</td>
+                                <td colspan="2">
+                                    Notas Finales
+                                </td>
                             </tr>
                         </tfoot>
                     </table>
+
                 </div>
             </div>
         </div>
     </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.min.js"></script>
-    <script src="js/main.js"></script>
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <script src="js/vue.min.js"></script>
+    <script src="js/principal.js"></script>
 </body>
 </html>
